--- a/jedivar.yaml
+++ b/jedivar.yaml
@@ -1,10 +1,10 @@
 _member: &memberConfig
   date: &analysisDate '@analysisDate@'
-  state variables: &incvars [water_vapor_mixing_ratio_wrt_moist_air, air_pressure_at_surface, air_temperature, northward_wind, eastward_wind]
+  state variables: &incvars [water_vapor_mixing_ratio_wrt_moist_air, air_pressure_at_surface, air_temperature, northward_wind, eastward_wind, cloud_liquid_water, cloud_liquid_ice, rain_water, snow_water, graupel, equivalent_reflectivity_factor, upward_air_velocity]
   stream name: ensemble
 
 output:
-  filename: mpasin.nc
+  filename: mpasout.nc
   stream name: analysis
 variational:
   minimizer:
@@ -56,6 +56,7 @@ cost function:
     - isltyp
     - snowh
     - vegetation_area_fraction
+    - air_temperature_at_2m
     - eastward_wind_at_10m
     - northward_wind_at_10m
     - lai
@@ -68,7 +69,10 @@ cost function:
     - rain_water
     - snow_water
     - cldfrac
-    filename: mpasin.nc
+    - equivalent_reflectivity_factor
+    - w
+    - upward_air_velocity
+    filename: mpasout.nc
     date: *analysisDate
   background error:
     covariance model: hybrid
@@ -76,44 +80,49 @@ cost function:
     - covariance:
         covariance model: SABER
         saber central block:
-          saber block name: BUMP_NICAS
+          saber block name: gsi static covariance
           active variables: &ctlvars
-          - air_horizontal_streamfunction
-          - air_horizontal_velocity_potential
+          - eastward_wind
+          - northward_wind
           - air_temperature
-          - water_vapor_mixing_ratio_wrt_moist_air
+          - relative_humidity
           - air_pressure_at_surface
           read:
-            io:
-              data directory: data/static_bec/nicas
-              files prefix: mpas
-            drivers:
-              multivariate strategy: univariate
-              read local nicas: true
+            gsi akbk: foo.nc
+            gsi error covariance file: berror_stats
+            gsi berror namelist file: gsiparm_regional.anl
+            processor layout x direction: "@GSIBEC_X@"
+            processor layout y direction: "@GSIBEC_Y@"
+            debugging deep bypass gsi B error: false
+            debugging mode: false
+            regional mode: true
         saber outer blocks:
-        - saber block name: StdDev
-          read:
-            model file:
-              filename: data/static_bec/stddev.nc
-              date: *analysisDate
-              stream name: control
-        - saber block name: BUMP_VerticalBalance
-          read:
-            io:
-              data directory: data/static_bec/vbal
-              files prefix: mpas_vbal
-            drivers:
-              read local sampling: true
-              read vertical balance: true
-            vertical balance:
-              vbal:
-              - balanced variable: air_horizontal_velocity_potential
-                unbalanced variable: air_horizontal_streamfunction
-                diagonal regression: true
-              - balanced variable: air_temperature
-                unbalanced variable: air_horizontal_streamfunction
-              - balanced variable: air_pressure_at_surface
-                unbalanced variable: air_horizontal_streamfunction
+        - saber block name: interpolation
+          inner geometry:
+            function space: StructuredColumns
+            custom grid matching gsi:
+              type: rotated_lonlat
+              lats: "@GSIBEC_NLAT@"
+              lons: "@GSIBEC_NLON@"
+              lat_start: "@GSIBEC_LAT_START@"
+              lat_end: "@GSIBEC_LAT_END@"
+              lon_start: "@GSIBEC_LON_START@"
+              lon_end: "@GSIBEC_LON_END@"
+              north_pole_lat: "@GSIBEC_NORTH_POLE_LAT@"
+              north_pole_lon: "@GSIBEC_NORTH_POLE_LON@"
+            custom partitioner matching gsi:
+              bands: "@GSIBEC_Y@"  # matches GSI partition for 1 or 2 MPI tasks, but too simplistic in general
+            halo: 1
+          forward interpolator:
+            local interpolator type: oops unstructured grid interpolator
+          inverse interpolator:
+            local interpolator type: oops unstructured grid interpolator
+          state variables to inverse:  # Make sure to also re-order the state passed to GSI-B constructor
+          - eastward_wind
+          - northward_wind
+          - air_temperature
+          - air_pressure_at_surface
+          - water_vapor_mixing_ratio_wrt_moist_air
         linear variable change:
           linear variable change name: Control2Analysis
           input variables: *ctlvars
@@ -148,6 +157,36 @@ cost function:
         value: "@HYB_WGT_ENS@"
   observations:
      observers:
+     - obs space:
+         name: refl10cm
+         obsdatain:
+           engine:
+             type: H5File
+             obsfile: data/obs/ioda_mrms_refl.nc
+         obsdataout:
+           engine:
+             type: H5File
+             allow overwrite: true
+             obsfile: jdiag_mrms_refl.nc
+         io pool:
+           write multiple files: false
+         _source: mrms
+         simulated variables:
+         - equivalentReflectivityFactor
+       obs operator:
+         name: VertInterp
+         vertical coordinate: height_above_mean_sea_level
+         observation vertical coordinate: height
+         interpolation method: linear
+         observation alias file: obsop_name_map.yaml
+       _obsname: refl10cm
+       obs filters:
+       - filter: Background Check
+         filter variables:
+         - name: equivalentReflectivityFactor
+         threshold: 12.0
+         action:
+           name: reject
      - obs space:
          name: adpsfc_t181
          distribution:
@@ -827,7 +866,7 @@ cost function:
                  # The new feature "surface observation error ramp"
                  # needs to be added to UFO to align with the ramp
                  # options for temperature and humidity in GSI.
-                 #surface observation error ramp: true
+                 surface observation error ramp: true
 
 #         # Error inflation based on errormod (qcmod.f90)
 #         - filter: Perform Action
@@ -3008,9 +3047,6 @@ cost function:
 
        obs operator:
            name: VertInterp
-           hofx_scaling: true
-           hofx scaling field: wind_reduction_factor_at_10m
-           hofx scaling field group: GeoVaLs
            vertical coordinate: air_pressure
            observation vertical coordinate: pressure
            observation vertical coordinate group: MetaData
@@ -14281,14 +14317,14 @@ cost function:
          - localization method: Horizontal Gaspari-Cohn
            lengthscale: 300e3 # orig
        obs bias:
-         input file: data/obs/amsua_n19.satbias.nc
-         output file: out_amsua_n19.satbias.nc
+         input file: data/satbias_in/amsua_n19.satbias.nc
+         output file: data/satbias_out/amsua_n19.satbias.nc
          variational bc:
            predictors:
            - name: constant
            - name: lapseRate
              order: 2
-             tlapse: &amsua_n19_tlapse data/obs/amsua_n19.tlapse.txt
+             tlapse: &amsua_n19_tlapse data/satbias_in/amsua_n19.tlapse.txt
            - name: lapseRate
              tlapse: *amsua_n19_tlapse
            - name: emissivityJacobian
@@ -14305,11 +14341,11 @@ cost function:
            step size: 1.0e-4
            largest analysis variance: 10000.0
            prior:
-             input file: data/obs/amsua_n19.satbias_cov.nc
+             input file: data/satbias_in/amsua_n19.satbias_cov.nc
              inflation:
                ratio: 1.1
                ratio for small dataset: 2.0
-           output file: out_amsua_n19.satbias_cov.nc
+           output file: data/satbias_out/amsua_n19.satbias_cov.nc
        obs filters:
        - filter: BlackList
          filter variables:
@@ -14659,14 +14695,14 @@ cost function:
          - localization method: Horizontal Gaspari-Cohn
            lengthscale: 300e3 # orig
        obs bias:
-         input file:  data/obs/amsua_n20.satbias.nc
-         output file: out_amsua_n20.satbias.nc
+         input file:  data/satbias_in/amsua_n20.satbias.nc
+         output file: data/satbias_out/amsua_n20.satbias.nc
          variational bc:
            predictors:
            - name: constant
            - name: lapseRate
              order: 2
-             tlapse: &amsua_n20_tlapse  data/obs/amsua_n20.tlapse.txt
+             tlapse: &amsua_n20_tlapse  data/satbias_in/amsua_n20.tlapse.txt
            - name: lapseRate
              tlapse: *amsua_n20_tlapse
            - name: emissivityJacobian
@@ -14683,11 +14719,11 @@ cost function:
            step size: 1.0e-4
            largest analysis variance: 10000.0
            prior:
-             input file: data/obs/amsua_n20.satbias_cov.nc
+             input file: data/satbias_in/amsua_n20.satbias_cov.nc
              inflation:
                ratio: 1.1
                ratio for small dataset: 2.0
-           output file: out_amsua_n20.satbias_cov.nc
+           output file: data/satbias_out/amsua_n20.satbias_cov.nc
 
        obs pre filters:
        # Step 0-A: Create Diagnostic Flags
@@ -15244,14 +15280,14 @@ cost function:
            lengthscale: 300e3 # orig
 
        obs bias:
-         input file:  data/obs/atms_npp.satbias.nc
-         output file: out_atms_npp.satbias.nc
+         input file:  data/satbias_in/atms_npp.satbias.nc
+         output file: data/satbias_out/atms_npp.satbias.nc
          variational bc:
            predictors:
            - name: constant
            - name: lapseRate
              order: 2
-             tlapse: &atms_npp_tlapse  data/obs/atms_npp.tlapse.txt
+             tlapse: &atms_npp_tlapse  data/satbias_in/atms_npp.tlapse.txt
            - name: lapseRate
              tlapse: *atms_npp_tlapse
            - name: emissivityJacobian
@@ -15268,11 +15304,11 @@ cost function:
            step size: 1.0e-4
            largest analysis variance: 10000.0
            prior:
-             input file: data/obs/atms_npp.satbias_cov.nc
+             input file: data/satbias_in/atms_npp.satbias_cov.nc
              inflation:
                ratio: 1.1
                ratio for small dataset: 2.0
-           output file: out_atms_npp.satbias_cov.nc
+           output file: data/satbias_out/atms_npp.satbias_cov.nc
 
        obs pre filters:
        # Step 0-A: Create Diagnostic Flags
@@ -15836,14 +15872,14 @@ cost function:
   # Observation Bias Correction (VarBC)
   # -----------------------------------
        obs bias:
-         input file: data/obs/abi_g16.satbias.nc
-         output file: out_abi_g16.satbias.nc
+         input file: data/satbias_in/abi_g16.satbias.nc
+         output file: data/satbias_out/abi_g16.satbias.nc
          variational bc:
            predictors:
            - name: constant
            - name: lapseRate
              order: 2
-             tlapse: &abi_g16_tlapse data/obs/abi_g16.tlapse.txt
+             tlapse: &abi_g16_tlapse data/satbias_in/abi_g16.tlapse.txt
            - name: lapseRate
              tlapse: *abi_g16_tlapse
            - name: emissivityJacobian
@@ -15864,11 +15900,11 @@ cost function:
            step size: 1.0e-4
            largest analysis variance: 10000.0
            prior:
-             input file: data/obs/abi_g16.satbias_cov.nc
+             input file: data/satbias_in/abi_g16.satbias_cov.nc
              inflation:
                ratio: 1.1
                ratio for small dataset: 2.0
-           output file: out_abi_g16.satbias_cov.nc
+           output file: data/satbias_out/abi_g16.satbias_cov.nc
 
   # Observation Filters (QC)
   # ------------------------
@@ -16328,14 +16364,14 @@ cost function:
   # Observation Bias Correction (VarBC)
   # -----------------------------------
        obs bias:
-         input file: data/obs/abi_g18.satbias.nc
-         output file: out_abi_g18.satbias.nc
+         input file: data/satbias_in/abi_g18.satbias.nc
+         output file: data/satbias_out/abi_g18.satbias.nc
          variational bc:
            predictors:
            - name: constant
            - name: lapseRate
              order: 2
-             tlapse: &abi_g18_tlapse data/obs/abi_g18.tlapse.txt
+             tlapse: &abi_g18_tlapse data/satbias_in/abi_g18.tlapse.txt
            - name: lapseRate
              tlapse: *abi_g18_tlapse
            - name: emissivityJacobian
@@ -16356,11 +16392,11 @@ cost function:
            step size: 1.0e-4
            largest analysis variance: 10000.0
            prior:
-             input file: data/obs/abi_g18.satbias_cov.nc
+             input file: data/satbias_in/abi_g18.satbias_cov.nc
              inflation:
                ratio: 1.1
                ratio for small dataset: 2.0
-           output file: out_abi_g18.satbias_cov.nc
+           output file: data/satbias_out/abi_g18.satbias_cov.nc
 
   # Observation Filters (QC)
   # ------------------------
